<resources>
    <string name="app_name">BearNote</string>
    <string name="app_name_cn">小熊记账</string>
    <string name="detail">明细</string>
    <string name="chart">图表</string>
    <string name="note">记账</string>
    <string name="assets">账户</string>
    <string name="personal">我的</string>
    <string name="contentDescription">contentDescription</string>
    <string name="spending">支出</string>
    <string name="income">收入</string>
    <string name="transfer">转账</string>
    <string name="information">便签</string>
    <string name="lastMonth">上月</string>
    <string name="nextMonth">下月</string>
    <string name="today">今日</string>
    <string name="delete_question">删除类别会同时删除该类别下的所有记账明细</string>
    <string name="delete_question2">删除账户会同时删除该账户下的所有记账明细与转账记录</string>
    <string name="delete_question3">是否删除该记账?</string>
    <string name="delete_question4">是否退出登录?</string>
    <string name="no">取消</string>
    <string name="yes">确定</string>
    <string name="save">保存</string>
</resources>